# my-lib-catalog

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  main.py  pyproject.toml
catalog/: api.py  config.py  persistence.py  series.py  worker.py
catalog/metadata/: __init__.py  api.py  worker.py
catalog/notas/: __init__.py  storage.py
catalog/organizer/: __init__.py  algorithm.py  models.py  storage.py
catalog/reading/: __init__.py  storage.py
catalog/scanning/: __init__.py  isbn.py
catalog/storage/: __init__.py  git_sync.py  github_sync.py  persistence.py
data/: biblioteca.csv  biblioteca.jsonl  capas_cache.json  capas_manuais.json  estantes.json  lista_leitura.json
data/batch_submissions/: Batch_Books.md  Batch_Books2.md  Batch_Books3.md  Batch_Books4.md  Batch_Books5.md  Batch_Books6.md
docs/superpowers/plans/: 2026-06-17-covers-and-metrics.md  2026-06-18-capa-fonte-e-sobre.md  2026-06-19-etiquetas.md  2026-06-19-ficha-busca-estantes.md  2026-06-19-lista-leitura.md  2026-06-19-streamlit-multipage.md  (+6 more)
prompts/: plano-refatoracao.md
scripts/: main.py  migrar_capa_fonte.py  migrar_etiquetas.py  migrar_posicao_estante.py  migrar_series.py  recuperar_anos.py
src/catalog/: api.py
tests/: conftest.py  test_api.py  test_formatting.py  test_git_sync.py  test_isbn.py  test_main_helpers.py  test_notas.py  test_organizer.py  test_persistence.py  test_reading.py  test_series.py  test_ui_utils.py  test_worker.py
ui/: app.py  formatting.py  utils.py
ui/pages/: acervo.py  configuracoes.py  estantes.py  ficha.py  leitura.py  sobre.py
(+13 files in other folders)
