[project]
name = "my-lib-catalog"
version = "0.1.0"
description = "Catalogação de livros via leitor de código de barras (modo assíncrono)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pytest>=7.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
